Sutter Health/src/objects/Safety_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSMC-Ashby</fullName>
                </value>
                <value>
                    <fullName>ABSMC-Herrick</fullName>
                </value>
                <value>
                    <fullName>ABSMC-Summit</fullName>
                </value>
                <value>
                    <fullName>CPMC-California</fullName>
                </value>
                <value>
                    <fullName>CPMC-Davies</fullName>
                </value>
                <value>
                    <fullName>CPMC-Pacific</fullName>
                </value>
                <value>
                    <fullName>CPMC-St. Luke&apos;s</fullName>
                </value>
                <value>
                    <fullName>Eden Medical Center</fullName>
                </value>
                <value>
                    <fullName>Kahi Mohala, A Behavioral Healthcare System</fullName>
                </value>
                <value>
                    <fullName>Memorial Hospital, Los Banos</fullName>
                </value>
                <value>
                    <fullName>Memorial Medical Center, Modesto</fullName>
                </value>
                <value>
                    <fullName>Menlo Park Surgical Hospital</fullName>
                </value>
                <value>
                    <fullName>Mills-Peninsula Health Servies</fullName>
                </value>
                <value>
                    <fullName>Novato Community Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Amador Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Auburn Faith Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Coast Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Center for Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Sutter Davis</fullName>
                </value>
                <value>
                    <fullName>Sutter Delta Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Lakeside Hospital &amp; Center for Health</fullName>
                </value>
                <value>
                    <fullName>Sutter Maternity &amp; Surgey Center of Santa Cruz</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Center, Modesto</fullName>
                </value>
                <value>
                    <fullName>Sutter Roseville Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Center, Sacramento</fullName>
                </value>
                <value>
                    <fullName>Sutter Santa Rosa Regional Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Solano Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Tracy Community Hospital</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Pacific Medical Foundation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_of_Event__c</fullName>
        <label>Category of Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Procedural</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Patient Protection</fullName>
                </value>
                <value>
                    <fullName>Care management</fullName>
                </value>
                <value>
                    <fullName>Product or Device</fullName>
                </value>
                <value>
                    <fullName>Criminal</fullName>
                </value>
                <value>
                    <fullName>Teamwork Failures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causes__c</fullName>
        <label>Causes</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_of_Event__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Body Part</fullName>
                </value>
                <value>
                    <fullName>Wrong Patient</fullName>
                </value>
                <value>
                    <fullName>Wrong Procedure</fullName>
                </value>
                <value>
                    <fullName>Unintended Retention of a Foreign Object</fullName>
                </value>
                <value>
                    <fullName>Post Procedure Death of Healthy Patient</fullName>
                </value>
                <value>
                    <fullName>Other Procedural</fullName>
                </value>
                <value>
                    <fullName>Electric Shock</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Restraints/Bedrails</fullName>
                </value>
                <value>
                    <fullName>Gas Administration Event</fullName>
                </value>
                <value>
                    <fullName>Other Environmental</fullName>
                </value>
                <value>
                    <fullName>Infant Discharged to Wrong Person</fullName>
                </value>
                <value>
                    <fullName>Patient Elopement</fullName>
                </value>
                <value>
                    <fullName>Suicide or Attempted Suicide</fullName>
                </value>
                <value>
                    <fullName>Inappropriate Discharge</fullName>
                </value>
                <value>
                    <fullName>Medication Error</fullName>
                </value>
                <value>
                    <fullName>Blood Product Administration Event</fullName>
                </value>
                <value>
                    <fullName>Maternal/Perinatal Death or Disability</fullName>
                </value>
                <value>
                    <fullName>Pressure Ulcer</fullName>
                </value>
                <value>
                    <fullName>Hospital Acquired Infection (HAI)</fullName>
                </value>
                <value>
                    <fullName>Delay in Diagnosis or Treatment</fullName>
                </value>
                <value>
                    <fullName>Other Care</fullName>
                </value>
                <value>
                    <fullName>Contaminated Drugs, Devices, or Biologics</fullName>
                </value>
                <value>
                    <fullName>Device Malfunction or Use Not as Intended</fullName>
                </value>
                <value>
                    <fullName>Intravascular Air Embolism</fullName>
                </value>
                <value>
                    <fullName>Non-Licensed Individual Orders Care</fullName>
                </value>
                <value>
                    <fullName>Abduction</fullName>
                </value>
                <value>
                    <fullName>Sexual Assault</fullName>
                </value>
                <value>
                    <fullName>Physical Assault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRN__c</fullName>
        <label>MRN</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Tip_To_Avoid__c</fullName>
        <label>Tip To Avoid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Event__c</fullName>
        <label>Type of Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Near Miss/Good Catch [Error occurred but didn’t reach patient]</fullName>
                </value>
                <value>
                    <fullName>Precursor Event [Error reached patient, but no or minimal harm]</fullName>
                </value>
                <value>
                    <fullName>Serious Event [Error reach patient and moderate to severe harm]</fullName>
                </value>
                <value>
                    <fullName>Teamwork Failures</fullName>
                </value>
                <value>
                    <fullName>Safety Improvement Opportunity [No error occurred--YET, but one could!]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Safety Reporting</label>
    <nameField>
        <displayFormat>SRN-{000000000}</displayFormat>
        <label>Safety Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>